Fix most of the linting errors.