@@ -20,7 +20,6 @@ import java.lang.reflect.Modifier;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -43,7 +42,7 @@ public final class ParameterizedTypeName extends TypeName {
     super(annotations);
     this.rawType = checkNotNull(rawType, "rawType == null").annotated(annotations);
     this.enclosingType = enclosingType;
-    this.typeArguments = Util.immutableList(typeArguments);
+    this.typeArguments = List.copyOf(typeArguments);
 
     checkArgument(!this.typeArguments.isEmpty() || enclosingType != null,
         "no type arguments: %s", rawType);
@@ -111,7 +110,7 @@ public final class ParameterizedTypeName extends TypeName {
 
   /** Returns a parameterized type, applying {@code typeArguments} to {@code rawType}. */
   public static ParameterizedTypeName get(ClassName rawType, TypeName... typeArguments) {
-    return new ParameterizedTypeName(null, rawType, Arrays.asList(typeArguments));
+    return new ParameterizedTypeName(null, rawType, List.of(typeArguments));
   }
 
   /** Returns a parameterized type, applying {@code typeArguments} to {@code rawType}. */
